# system6-aquaculture-platform

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  start-demo.bat
.playwright-cli/: page-2026-05-27T04-40-53-194Z.yml  page-2026-05-27T04-40-57-334Z.yml  page-2026-05-27T04-41-21-294Z.yml  page-2026-05-27T04-41-35-014Z.yml  page-2026-05-27T04-41-59-656Z.yml  page-2026-05-27T04-42-29-712Z.yml  page-2026-05-27T04-42-54-090Z.yml  page-2026-05-27T04-43-05-543Z.yml  page-2026-05-27T04-43-07-551Z.yml  page-2026-05-27T04-51-07-596Z.yml  page-2026-05-27T04-51-27-959Z.yml  page-2026-05-27T04-51-47-824Z.yml  page-2026-05-27T04-52-00-009Z.yml  page-2026-05-27T04-52-11-152Z.yml  page-2026-05-27T04-52-30-088Z.yml  page-2026-05-27T04-52-42-135Z.yml  page-2026-05-27T04-52-54-217Z.yml  (+13 more)
backend/: CLAUDE.md  README.md  alembic.ini  aquaculture.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ef1631122581_initial_schema.py
backend/data/: guangxi_reference_readings.csv  usgs_reference_readings.csv
backend/scripts/: fetch_guangxi_data.py  fetch_reference_readings.py
backend/src/aquaculture_api/: __init__.py  agent.py  config.py  deps.py  main.py  models.py  schemas.py  security.py  services.py  store.py
backend/src/aquaculture_api/routes/: agent.py  alerts.py  auth.py  demo.py  density.py  edge.py  operations.py  ponds.py  recommendations.py  reports.py
backend/tests/: conftest.py  test_agent.py  test_compliance_api.py  test_domain_logic.py  test_error_paths.py  test_health.py  test_platform_api.py  test_reference_data.py
(+67 files in other folders)
